# kronofoto

./: .gitattributes  .gitignore  .gitmodules  .lando.yml  .prettierrc  Dockerfile  README.md  cms_requirements.txt  esbuild-config.js  gulpfile.js  package-lock.json  package.json  requirements.txt  rollup.config.js  webpack.config.js
kronofoto/: 202012.csv  202108.csv  2022021801.csv  2022021802.csv  20220311.csv  20220406.csv  20220415.csv  20220418.csv  extractor.py  fortepandata.csv  manage.py  mypy.ini  pyproject.toml  pytest.ini
kronofoto/archive/: admin.py  apps.py  context_processors.py  fields.py  forms.py  geocoder.py  imageutil.py  middleware.py  models.py  package.json  reverse.py  rollup.config.js  settings.py  signals.py  storage.py  tests.py  token.py  urls.py  views.py  widgets.py
kronofoto/archive/auth/: backends.py  forms.py  token.py  views.py
kronofoto/archive/forms/: __init__.py  card.py  photobase.py
kronofoto/archive/management/: __init__.py
kronofoto/archive/migrations/: 0001_initial.py  0001_initial_squashed_0032_auto_20220729_2222.py  0002_auto_20191118_2250.py  0002_wordcount.py  0003_auto_20191118_2255.py  0003_auto_20200610_2212.py  0004_auto_20191118_2256.py  0004_phototag_creator.py  0005_auto_20200825_0033.py  0005_photo_created.py  0006_auto_20200827_0209.py  0006_photo_created_by.py  0007_auto_20191205_2055.py  0007_auto_20200904_2320.py  0008_auto_20191205_2201.py  0008_auto_20200922_2139.py  0009_auto_20191205_2204.py  0009_auto_20201001_2126.py  0010_auto_20191209_2249.py  0010_auto_20201029_2210.py  0011_auto_20201029_2216.py  0011_needfinalapproval_scannedphoto.py  0012_auto_20200217_2227.py  0012_newcutoff.py  0013_auto_20200218_2322.py  0013_auto_20210111_2053.py  0014_auto_20200220_0001.py  0014_auto_20210111_2258.py  0015_auto_20200304_2341.py  0015_photo_circa.py  0016_auto_20210115_2030.py  0016_remove_scannedphoto_donor.py  0017_auto_20210326_2103.py  0017_photovote.py  0018_auto_20210326_2116.py  0018_photovote_infavor.py  0019_auto_20200309_2307.py  0019_auto_20210331_2231.py  0020_auto_20200309_2311.py  0020_auto_20210331_2238.py  (+149 more)
kronofoto/archive/models/: __init__.py  archive.py  category.py  collectible.py  collection.py  collectionquery.py  csvrecord.py  cutoff.py  donor.py  exhibit.py  key.py  location.py  photo.py  photosphere.py  place.py  tag.py  term.py  wordcount.py
kronofoto/archive/search/: __init__.py  expression.py  parser.py
kronofoto/archive/templatetags/: docnav.py  header.py  krono_urls.py  login.py  menu_tags.py  permissions.py  photodetails.py  photometadata.py  searchform.py  thumbnails.py  timeline.py  urlify.py  widgets.py
kronofoto/archive/tests/: __init__.py  test_auth.py  test_grid.py  test_krono_urls.py  test_models.py  test_paginator.py  test_photo.py  test_photosphere.py  test_search.py  (+5 more)
kronofoto/docs/: conf.py  index.rst  kronofoto.auth.rst  kronofoto.forms.rst  kronofoto.management.rst  kronofoto.models.rst  kronofoto.rst  kronofoto.search.rst  kronofoto.templatetags.rst  kronofoto.views.rst  modules.rst  template_context.rst
kronofoto/fortepan_us/: manage.py
kronofoto/geocoding/: geom.py  google.py
kronofoto/kronofoto/: defaults.py  examplesettings.py  urls.py  wsgi.py
kronofoto/tests/: models.py  settings.py  test_activitypub.py  test_admin.py  test_agreement.py  test_base.py  test_captcha.py  test_collections.py  test_contexts.py  test_exhibit.py  test_grid.py  test_images.py  test_import.py  test_models.py  test_multiform.py  test_paginator.py  test_photosphere.py  test_search.py  test_submission.py  test_tiles.py  urls.py  util.py
(+664 files in other folders)
